y.output
Terminals which are not used

   PUNTO_COMA


Grammar

    0 $accept: programa $end

    1 programa: START seccion_declaracion bloque END

    2 seccion_declaracion: VAR bloque_dec ENDVAR

    3 bloque_dec: bloque_dec declaracion
    4           | declaracion

    5 declaracion: CA t_datos CC DOS_PUNTOS CA lista_id CC

    6 t_datos: t_datos COMA t_dato
    7        | t_dato

    8 t_dato: FLOAT
    9       | INTEGER
   10       | STRING

   11 lista_id: lista_id COMA ID
   12         | ID

   13 bloque: bloque sentencia
   14       | sentencia

   15 sentencia: asignacion
   16          | bloque_if
   17          | bloque_while
   18          | lectura
   19          | escritura
   20          | expresion_aritmetica

   21 bloque_if: IF expresion_logica THEN bloque ENDIF
   22          | IF expresion_logica THEN bloque ELSE bloque ENDIF

   23 bloque_while: REPEAT expresion_logica bloque ENDREPEAT

   24 asignacion: ID ASIG expresion

   25 expresion: expresion_cadena
   26          | expresion_aritmetica

   27 expresion_cadena: CTE_STRING

   28 expresion_aritmetica: expresion_aritmetica SUMA termino
   29                     | expresion_aritmetica RESTA termino
   30                     | expresion_aritmetica MOD termino
   31                     | expresion_aritmetica DIV termino
   32                     | termino

   33 termino: termino POR factor
   34        | termino DIVIDIDO factor
   35        | factor

   36 factor: PA expresion_aritmetica PC
   37       | filter
   38       | ID
   39       | CTE_FLOAT
   40       | CTE_INT

   41 expresion_logica: termino_logico AND termino_logico
   42                 | termino_logico OR termino_logico
   43                 | termino_logico

   44 termino_logico: NOT termino_logico
   45               | expresion_aritmetica comp_bool expresion_aritmetica

   46 termino_filter: GUION_BAJO comp_bool PA expresion_aritmetica PC
   47               | GUION_BAJO comp_bool CTE_FLOAT
   48               | GUION_BAJO comp_bool CTE_INT

   49 comparacion_filter: termino_filter AND termino_filter
   50                   | termino_filter OR termino_filter
   51                   | termino_filter

   52 comp_bool: MENOR
   53          | MAYOR
   54          | MENOR_IGUAL
   55          | MAYOR_IGUAL
   56          | IGUAL
   57          | DISTINTO

   58 filter: FILTER PA comparacion_filter COMA CA lista_exp_coma CC PC

   59 lista_exp_coma: lista_exp_coma COMA expresion_aritmetica
   60               | expresion_aritmetica

   61 lectura: READ ID

   62 escritura: PRINT ID
   63          | PRINT CTE_STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
START (258) 1
END (259) 1
VAR (260) 2
ENDVAR (261) 2
INTEGER (262) 9
FLOAT (263) 8
STRING (264) 10
REPEAT (265) 23
ENDREPEAT (266) 23
IF (267) 21 22
THEN (268) 21 22
ELSE (269) 22
ENDIF (270) 21 22
AND (271) 41 49
OR (272) 42 50
NOT (273) 44
ASIG (274) 24
SUMA (275) 28
RESTA (276) 29
DIVIDIDO (277) 34
POR (278) 33
MENOR (279) 52
MAYOR (280) 53
MENOR_IGUAL (281) 54
MAYOR_IGUAL (282) 55
IGUAL (283) 56
DISTINTO (284) 57
PA (285) 36 46 58
PC (286) 36 46 58
CA (287) 5 58
CC (288) 5 58
COMA (289) 6 11 58 59
PUNTO_COMA (290)
DOS_PUNTOS (291) 5
GUION_BAJO (292) 46 47 48
READ (293) 61
PRINT (294) 62 63
FILTER (295) 58
DIV (296) 31
MOD (297) 30
ID (298) 11 12 24 38 61 62
CTE_FLOAT (299) 39 47
CTE_INT (300) 40 48
CTE_STRING (301) 27 63


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
programa (48)
    on left: 1, on right: 0
seccion_declaracion (49)
    on left: 2, on right: 1
bloque_dec (50)
    on left: 3 4, on right: 2 3
declaracion (51)
    on left: 5, on right: 3 4
t_datos (52)
    on left: 6 7, on right: 5 6
t_dato (53)
    on left: 8 9 10, on right: 6 7
lista_id (54)
    on left: 11 12, on right: 5 11
bloque (55)
    on left: 13 14, on right: 1 13 21 22 23
sentencia (56)
    on left: 15 16 17 18 19 20, on right: 13 14
bloque_if (57)
    on left: 21 22, on right: 16
bloque_while (58)
    on left: 23, on right: 17
asignacion (59)
    on left: 24, on right: 15
expresion (60)
    on left: 25 26, on right: 24
expresion_cadena (61)
    on left: 27, on right: 25
expresion_aritmetica (62)
    on left: 28 29 30 31 32, on right: 20 26 28 29 30 31 36 45 46 59
    60
termino (63)
    on left: 33 34 35, on right: 28 29 30 31 32 33 34
factor (64)
    on left: 36 37 38 39 40, on right: 33 34 35
expresion_logica (65)
    on left: 41 42 43, on right: 21 22 23
termino_logico (66)
    on left: 44 45, on right: 41 42 43 44
termino_filter (67)
    on left: 46 47 48, on right: 49 50 51
comparacion_filter (68)
    on left: 49 50 51, on right: 58
comp_bool (69)
    on left: 52 53 54 55 56 57, on right: 45 46 47 48
filter (70)
    on left: 58, on right: 37
lista_exp_coma (71)
    on left: 59 60, on right: 58 59
lectura (72)
    on left: 61, on right: 18
escritura (73)
    on left: 62 63, on right: 19


state 0

    0 $accept: . programa $end

    START  shift, and go to state 1

    programa  go to state 2


state 1

    1 programa: START . seccion_declaracion bloque END

    VAR  shift, and go to state 3

    seccion_declaracion  go to state 4


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


state 3

    2 seccion_declaracion: VAR . bloque_dec ENDVAR

    CA  shift, and go to state 6

    bloque_dec   go to state 7
    declaracion  go to state 8


state 4

    1 programa: START seccion_declaracion . bloque END

    REPEAT     shift, and go to state 9
    IF         shift, and go to state 10
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    bloque                go to state 18
    sentencia             go to state 19
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 5

    0 $accept: programa $end .

    $default  accept


state 6

    5 declaracion: CA . t_datos CC DOS_PUNTOS CA lista_id CC

    INTEGER  shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31

    t_datos  go to state 32
    t_dato   go to state 33


state 7

    2 seccion_declaracion: VAR bloque_dec . ENDVAR
    3 bloque_dec: bloque_dec . declaracion

    ENDVAR  shift, and go to state 34
    CA      shift, and go to state 6

    declaracion  go to state 35


state 8

    4 bloque_dec: declaracion .

    $default  reduce using rule 4 (bloque_dec)


state 9

   23 bloque_while: REPEAT . expresion_logica bloque ENDREPEAT

    NOT        shift, and go to state 36
    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 38
    termino               go to state 24
    factor                go to state 25
    expresion_logica      go to state 39
    termino_logico        go to state 40
    filter                go to state 26


state 10

   21 bloque_if: IF . expresion_logica THEN bloque ENDIF
   22          | IF . expresion_logica THEN bloque ELSE bloque ENDIF

    NOT        shift, and go to state 36
    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 38
    termino               go to state 24
    factor                go to state 25
    expresion_logica      go to state 41
    termino_logico        go to state 40
    filter                go to state 26


state 11

   36 factor: PA . expresion_aritmetica PC

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 42
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26


state 12

   61 lectura: READ . ID

    ID  shift, and go to state 43


state 13

   62 escritura: PRINT . ID
   63          | PRINT . CTE_STRING

    ID          shift, and go to state 44
    CTE_STRING  shift, and go to state 45


state 14

   58 filter: FILTER . PA comparacion_filter COMA CA lista_exp_coma CC PC

    PA  shift, and go to state 46


state 15

   24 asignacion: ID . ASIG expresion
   38 factor: ID .

    ASIG  shift, and go to state 47

    $default  reduce using rule 38 (factor)


state 16

   39 factor: CTE_FLOAT .

    $default  reduce using rule 39 (factor)


state 17

   40 factor: CTE_INT .

    $default  reduce using rule 40 (factor)


state 18

    1 programa: START seccion_declaracion bloque . END
   13 bloque: bloque . sentencia

    END        shift, and go to state 48
    REPEAT     shift, and go to state 9
    IF         shift, and go to state 10
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    sentencia             go to state 49
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 19

   14 bloque: sentencia .

    $default  reduce using rule 14 (bloque)


state 20

   16 sentencia: bloque_if .

    $default  reduce using rule 16 (sentencia)


state 21

   17 sentencia: bloque_while .

    $default  reduce using rule 17 (sentencia)


state 22

   15 sentencia: asignacion .

    $default  reduce using rule 15 (sentencia)


state 23

   20 sentencia: expresion_aritmetica .
   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino

    SUMA   shift, and go to state 50
    RESTA  shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53

    $default  reduce using rule 20 (sentencia)


state 24

   32 expresion_aritmetica: termino .
   33 termino: termino . POR factor
   34        | termino . DIVIDIDO factor

    DIVIDIDO  shift, and go to state 54
    POR       shift, and go to state 55

    $default  reduce using rule 32 (expresion_aritmetica)


state 25

   35 termino: factor .

    $default  reduce using rule 35 (termino)


state 26

   37 factor: filter .

    $default  reduce using rule 37 (factor)


state 27

   18 sentencia: lectura .

    $default  reduce using rule 18 (sentencia)


state 28

   19 sentencia: escritura .

    $default  reduce using rule 19 (sentencia)


state 29

    9 t_dato: INTEGER .

    $default  reduce using rule 9 (t_dato)


state 30

    8 t_dato: FLOAT .

    $default  reduce using rule 8 (t_dato)


state 31

   10 t_dato: STRING .

    $default  reduce using rule 10 (t_dato)


state 32

    5 declaracion: CA t_datos . CC DOS_PUNTOS CA lista_id CC
    6 t_datos: t_datos . COMA t_dato

    CC    shift, and go to state 56
    COMA  shift, and go to state 57


state 33

    7 t_datos: t_dato .

    $default  reduce using rule 7 (t_datos)


state 34

    2 seccion_declaracion: VAR bloque_dec ENDVAR .

    $default  reduce using rule 2 (seccion_declaracion)


state 35

    3 bloque_dec: bloque_dec declaracion .

    $default  reduce using rule 3 (bloque_dec)


state 36

   44 termino_logico: NOT . termino_logico

    NOT        shift, and go to state 36
    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 38
    termino               go to state 24
    factor                go to state 25
    termino_logico        go to state 58
    filter                go to state 26


state 37

   38 factor: ID .

    $default  reduce using rule 38 (factor)


state 38

   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino
   45 termino_logico: expresion_aritmetica . comp_bool expresion_aritmetica

    SUMA         shift, and go to state 50
    RESTA        shift, and go to state 51
    MENOR        shift, and go to state 59
    MAYOR        shift, and go to state 60
    MENOR_IGUAL  shift, and go to state 61
    MAYOR_IGUAL  shift, and go to state 62
    IGUAL        shift, and go to state 63
    DISTINTO     shift, and go to state 64
    DIV          shift, and go to state 52
    MOD          shift, and go to state 53

    comp_bool  go to state 65


state 39

   23 bloque_while: REPEAT expresion_logica . bloque ENDREPEAT

    REPEAT     shift, and go to state 9
    IF         shift, and go to state 10
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    bloque                go to state 66
    sentencia             go to state 19
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 40

   41 expresion_logica: termino_logico . AND termino_logico
   42                 | termino_logico . OR termino_logico
   43                 | termino_logico .

    AND  shift, and go to state 67
    OR   shift, and go to state 68

    $default  reduce using rule 43 (expresion_logica)


state 41

   21 bloque_if: IF expresion_logica . THEN bloque ENDIF
   22          | IF expresion_logica . THEN bloque ELSE bloque ENDIF

    THEN  shift, and go to state 69


state 42

   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino
   36 factor: PA expresion_aritmetica . PC

    SUMA   shift, and go to state 50
    RESTA  shift, and go to state 51
    PC     shift, and go to state 70
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53


state 43

   61 lectura: READ ID .

    $default  reduce using rule 61 (lectura)


state 44

   62 escritura: PRINT ID .

    $default  reduce using rule 62 (escritura)


state 45

   63 escritura: PRINT CTE_STRING .

    $default  reduce using rule 63 (escritura)


state 46

   58 filter: FILTER PA . comparacion_filter COMA CA lista_exp_coma CC PC

    GUION_BAJO  shift, and go to state 71

    termino_filter      go to state 72
    comparacion_filter  go to state 73


state 47

   24 asignacion: ID ASIG . expresion

    PA          shift, and go to state 11
    FILTER      shift, and go to state 14
    ID          shift, and go to state 37
    CTE_FLOAT   shift, and go to state 16
    CTE_INT     shift, and go to state 17
    CTE_STRING  shift, and go to state 74

    expresion             go to state 75
    expresion_cadena      go to state 76
    expresion_aritmetica  go to state 77
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26


state 48

    1 programa: START seccion_declaracion bloque END .

    $default  reduce using rule 1 (programa)


state 49

   13 bloque: bloque sentencia .

    $default  reduce using rule 13 (bloque)


state 50

   28 expresion_aritmetica: expresion_aritmetica SUMA . termino

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    termino  go to state 78
    factor   go to state 25
    filter   go to state 26


state 51

   29 expresion_aritmetica: expresion_aritmetica RESTA . termino

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    termino  go to state 79
    factor   go to state 25
    filter   go to state 26


state 52

   31 expresion_aritmetica: expresion_aritmetica DIV . termino

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    termino  go to state 80
    factor   go to state 25
    filter   go to state 26


state 53

   30 expresion_aritmetica: expresion_aritmetica MOD . termino

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    termino  go to state 81
    factor   go to state 25
    filter   go to state 26


state 54

   34 termino: termino DIVIDIDO . factor

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    factor  go to state 82
    filter  go to state 26


state 55

   33 termino: termino POR . factor

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    factor  go to state 83
    filter  go to state 26


state 56

    5 declaracion: CA t_datos CC . DOS_PUNTOS CA lista_id CC

    DOS_PUNTOS  shift, and go to state 84


state 57

    6 t_datos: t_datos COMA . t_dato

    INTEGER  shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31

    t_dato  go to state 85


state 58

   44 termino_logico: NOT termino_logico .

    $default  reduce using rule 44 (termino_logico)


state 59

   52 comp_bool: MENOR .

    $default  reduce using rule 52 (comp_bool)


state 60

   53 comp_bool: MAYOR .

    $default  reduce using rule 53 (comp_bool)


state 61

   54 comp_bool: MENOR_IGUAL .

    $default  reduce using rule 54 (comp_bool)


state 62

   55 comp_bool: MAYOR_IGUAL .

    $default  reduce using rule 55 (comp_bool)


state 63

   56 comp_bool: IGUAL .

    $default  reduce using rule 56 (comp_bool)


state 64

   57 comp_bool: DISTINTO .

    $default  reduce using rule 57 (comp_bool)


state 65

   45 termino_logico: expresion_aritmetica comp_bool . expresion_aritmetica

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 86
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26


state 66

   13 bloque: bloque . sentencia
   23 bloque_while: REPEAT expresion_logica bloque . ENDREPEAT

    REPEAT     shift, and go to state 9
    ENDREPEAT  shift, and go to state 87
    IF         shift, and go to state 10
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    sentencia             go to state 49
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 67

   41 expresion_logica: termino_logico AND . termino_logico

    NOT        shift, and go to state 36
    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 38
    termino               go to state 24
    factor                go to state 25
    termino_logico        go to state 88
    filter                go to state 26


state 68

   42 expresion_logica: termino_logico OR . termino_logico

    NOT        shift, and go to state 36
    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 38
    termino               go to state 24
    factor                go to state 25
    termino_logico        go to state 89
    filter                go to state 26


state 69

   21 bloque_if: IF expresion_logica THEN . bloque ENDIF
   22          | IF expresion_logica THEN . bloque ELSE bloque ENDIF

    REPEAT     shift, and go to state 9
    IF         shift, and go to state 10
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    bloque                go to state 90
    sentencia             go to state 19
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 70

   36 factor: PA expresion_aritmetica PC .

    $default  reduce using rule 36 (factor)


state 71

   46 termino_filter: GUION_BAJO . comp_bool PA expresion_aritmetica PC
   47               | GUION_BAJO . comp_bool CTE_FLOAT
   48               | GUION_BAJO . comp_bool CTE_INT

    MENOR        shift, and go to state 59
    MAYOR        shift, and go to state 60
    MENOR_IGUAL  shift, and go to state 61
    MAYOR_IGUAL  shift, and go to state 62
    IGUAL        shift, and go to state 63
    DISTINTO     shift, and go to state 64

    comp_bool  go to state 91


state 72

   49 comparacion_filter: termino_filter . AND termino_filter
   50                   | termino_filter . OR termino_filter
   51                   | termino_filter .

    AND  shift, and go to state 92
    OR   shift, and go to state 93

    $default  reduce using rule 51 (comparacion_filter)


state 73

   58 filter: FILTER PA comparacion_filter . COMA CA lista_exp_coma CC PC

    COMA  shift, and go to state 94


state 74

   27 expresion_cadena: CTE_STRING .

    $default  reduce using rule 27 (expresion_cadena)


state 75

   24 asignacion: ID ASIG expresion .

    $default  reduce using rule 24 (asignacion)


state 76

   25 expresion: expresion_cadena .

    $default  reduce using rule 25 (expresion)


state 77

   26 expresion: expresion_aritmetica .
   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino

    SUMA   shift, and go to state 50
    RESTA  shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53

    $default  reduce using rule 26 (expresion)


state 78

   28 expresion_aritmetica: expresion_aritmetica SUMA termino .
   33 termino: termino . POR factor
   34        | termino . DIVIDIDO factor

    DIVIDIDO  shift, and go to state 54
    POR       shift, and go to state 55

    $default  reduce using rule 28 (expresion_aritmetica)


state 79

   29 expresion_aritmetica: expresion_aritmetica RESTA termino .
   33 termino: termino . POR factor
   34        | termino . DIVIDIDO factor

    DIVIDIDO  shift, and go to state 54
    POR       shift, and go to state 55

    $default  reduce using rule 29 (expresion_aritmetica)


state 80

   31 expresion_aritmetica: expresion_aritmetica DIV termino .
   33 termino: termino . POR factor
   34        | termino . DIVIDIDO factor

    DIVIDIDO  shift, and go to state 54
    POR       shift, and go to state 55

    $default  reduce using rule 31 (expresion_aritmetica)


state 81

   30 expresion_aritmetica: expresion_aritmetica MOD termino .
   33 termino: termino . POR factor
   34        | termino . DIVIDIDO factor

    DIVIDIDO  shift, and go to state 54
    POR       shift, and go to state 55

    $default  reduce using rule 30 (expresion_aritmetica)


state 82

   34 termino: termino DIVIDIDO factor .

    $default  reduce using rule 34 (termino)


state 83

   33 termino: termino POR factor .

    $default  reduce using rule 33 (termino)


state 84

    5 declaracion: CA t_datos CC DOS_PUNTOS . CA lista_id CC

    CA  shift, and go to state 95


state 85

    6 t_datos: t_datos COMA t_dato .

    $default  reduce using rule 6 (t_datos)


state 86

   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino
   45 termino_logico: expresion_aritmetica comp_bool expresion_aritmetica .

    SUMA   shift, and go to state 50
    RESTA  shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53

    $default  reduce using rule 45 (termino_logico)


state 87

   23 bloque_while: REPEAT expresion_logica bloque ENDREPEAT .

    $default  reduce using rule 23 (bloque_while)


state 88

   41 expresion_logica: termino_logico AND termino_logico .

    $default  reduce using rule 41 (expresion_logica)


state 89

   42 expresion_logica: termino_logico OR termino_logico .

    $default  reduce using rule 42 (expresion_logica)


state 90

   13 bloque: bloque . sentencia
   21 bloque_if: IF expresion_logica THEN bloque . ENDIF
   22          | IF expresion_logica THEN bloque . ELSE bloque ENDIF

    REPEAT     shift, and go to state 9
    IF         shift, and go to state 10
    ELSE       shift, and go to state 96
    ENDIF      shift, and go to state 97
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    sentencia             go to state 49
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 91

   46 termino_filter: GUION_BAJO comp_bool . PA expresion_aritmetica PC
   47               | GUION_BAJO comp_bool . CTE_FLOAT
   48               | GUION_BAJO comp_bool . CTE_INT

    PA         shift, and go to state 98
    CTE_FLOAT  shift, and go to state 99
    CTE_INT    shift, and go to state 100


state 92

   49 comparacion_filter: termino_filter AND . termino_filter

    GUION_BAJO  shift, and go to state 71

    termino_filter  go to state 101


state 93

   50 comparacion_filter: termino_filter OR . termino_filter

    GUION_BAJO  shift, and go to state 71

    termino_filter  go to state 102


state 94

   58 filter: FILTER PA comparacion_filter COMA . CA lista_exp_coma CC PC

    CA  shift, and go to state 103


state 95

    5 declaracion: CA t_datos CC DOS_PUNTOS CA . lista_id CC

    ID  shift, and go to state 104

    lista_id  go to state 105


state 96

   22 bloque_if: IF expresion_logica THEN bloque ELSE . bloque ENDIF

    REPEAT     shift, and go to state 9
    IF         shift, and go to state 10
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    bloque                go to state 106
    sentencia             go to state 19
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 97

   21 bloque_if: IF expresion_logica THEN bloque ENDIF .

    $default  reduce using rule 21 (bloque_if)


state 98

   46 termino_filter: GUION_BAJO comp_bool PA . expresion_aritmetica PC

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 107
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26


state 99

   47 termino_filter: GUION_BAJO comp_bool CTE_FLOAT .

    $default  reduce using rule 47 (termino_filter)


state 100

   48 termino_filter: GUION_BAJO comp_bool CTE_INT .

    $default  reduce using rule 48 (termino_filter)


state 101

   49 comparacion_filter: termino_filter AND termino_filter .

    $default  reduce using rule 49 (comparacion_filter)


state 102

   50 comparacion_filter: termino_filter OR termino_filter .

    $default  reduce using rule 50 (comparacion_filter)


state 103

   58 filter: FILTER PA comparacion_filter COMA CA . lista_exp_coma CC PC

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 108
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lista_exp_coma        go to state 109


state 104

   12 lista_id: ID .

    $default  reduce using rule 12 (lista_id)


state 105

    5 declaracion: CA t_datos CC DOS_PUNTOS CA lista_id . CC
   11 lista_id: lista_id . COMA ID

    CC    shift, and go to state 110
    COMA  shift, and go to state 111


state 106

   13 bloque: bloque . sentencia
   22 bloque_if: IF expresion_logica THEN bloque ELSE bloque . ENDIF

    REPEAT     shift, and go to state 9
    IF         shift, and go to state 10
    ENDIF      shift, and go to state 112
    PA         shift, and go to state 11
    READ       shift, and go to state 12
    PRINT      shift, and go to state 13
    FILTER     shift, and go to state 14
    ID         shift, and go to state 15
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    sentencia             go to state 49
    bloque_if             go to state 20
    bloque_while          go to state 21
    asignacion            go to state 22
    expresion_aritmetica  go to state 23
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26
    lectura               go to state 27
    escritura             go to state 28


state 107

   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino
   46 termino_filter: GUION_BAJO comp_bool PA expresion_aritmetica . PC

    SUMA   shift, and go to state 50
    RESTA  shift, and go to state 51
    PC     shift, and go to state 113
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53


state 108

   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino
   60 lista_exp_coma: expresion_aritmetica .

    SUMA   shift, and go to state 50
    RESTA  shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53

    $default  reduce using rule 60 (lista_exp_coma)


state 109

   58 filter: FILTER PA comparacion_filter COMA CA lista_exp_coma . CC PC
   59 lista_exp_coma: lista_exp_coma . COMA expresion_aritmetica

    CC    shift, and go to state 114
    COMA  shift, and go to state 115


state 110

    5 declaracion: CA t_datos CC DOS_PUNTOS CA lista_id CC .

    $default  reduce using rule 5 (declaracion)


state 111

   11 lista_id: lista_id COMA . ID

    ID  shift, and go to state 116


state 112

   22 bloque_if: IF expresion_logica THEN bloque ELSE bloque ENDIF .

    $default  reduce using rule 22 (bloque_if)


state 113

   46 termino_filter: GUION_BAJO comp_bool PA expresion_aritmetica PC .

    $default  reduce using rule 46 (termino_filter)


state 114

   58 filter: FILTER PA comparacion_filter COMA CA lista_exp_coma CC . PC

    PC  shift, and go to state 117


state 115

   59 lista_exp_coma: lista_exp_coma COMA . expresion_aritmetica

    PA         shift, and go to state 11
    FILTER     shift, and go to state 14
    ID         shift, and go to state 37
    CTE_FLOAT  shift, and go to state 16
    CTE_INT    shift, and go to state 17

    expresion_aritmetica  go to state 118
    termino               go to state 24
    factor                go to state 25
    filter                go to state 26


state 116

   11 lista_id: lista_id COMA ID .

    $default  reduce using rule 11 (lista_id)


state 117

   58 filter: FILTER PA comparacion_filter COMA CA lista_exp_coma CC PC .

    $default  reduce using rule 58 (filter)


state 118

   28 expresion_aritmetica: expresion_aritmetica . SUMA termino
   29                     | expresion_aritmetica . RESTA termino
   30                     | expresion_aritmetica . MOD termino
   31                     | expresion_aritmetica . DIV termino
   59 lista_exp_coma: lista_exp_coma COMA expresion_aritmetica .

    SUMA   shift, and go to state 50
    RESTA  shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53

    $default  reduce using rule 59 (lista_exp_coma)
